--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -24,10 +24,10 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2 
 
-font-0 = Iosevka Aile:style=Normal:size=12;2
-font-1 = Iosevka Aile:style=Light:size=11;2
-font-2 = Iosevka Aile:style=Bold:size=11;2
-font-3 = Iosevka Nerd Font:size=14;2
+font-0 = JetBrainsMono Nerd Font:style=Normal:size=12;2
+font-1 = JetBrainsMono Nerd Font:style=Light:size=11;2
+font-2 = JetBrainsMono Nerd Font:style=Bold:size=11;2
+font-3 = JetBrainsMono Nerd Font:size=12;2
 
 modules-left = i3 
 modules-center = xwindow
