--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,13 +4,14 @@ shadow = true;
 
 shadow-radius = 10;
 
-shadow-opacity = 0.86;
+shadow-opacity = 0.60;
 
 shadow-offset-x = -6;
 shadow-offset-y = -6;
 
 shadow-exclude = [
   "name = 'Notification'",
+  "class_g = 'i3-frame'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -30,16 +31,24 @@ fade-out-step = 0.1;
 active-opacity = 1.0; 
 inactive-opacity = 1.0;
 
-frame-opacity = 0.7;
+frame-opacity = 0.5;
 # inactive-dim = 0.2
 
 log-level = "warn";
+
+# Blur
+blur:
+{
+  method = "gaussian";
+  size = 10;
+  deviation = 5.0;
+};
 
 wintypes:
 {
   main = { fade = true; blur = true; };
   tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
-  dock = { shadow = false; opacity: 0.8; }
+  dock = { shadow = false; opacity: 0.7; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.9 }
   dropdown_menu = { opacity = 0.9; }
