--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,37 +1,35 @@
 [colors]
-background = #2E3440
+background = #20252d
 background-alt = #4C566A
 foreground = #fff
-foreground-alt = #fff
+foreground-alt = #ccc
+disabled = #aaa
 primary = #289bff
+focused = #58c8fc
 secondary = #00e595
+date = #00e595
 alert = #bd2c40
 
 [bar/top]
 width = 100%
 height = 22
-fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3
-line-color = #f00
+line-color = #000000
 
-padding-left = 1
-padding-right = 1 
+font-0 = Iosevka Nerd Font:style=Bold:size=12;2 # Modules 1
+font-1 = Iosevka Nerd Font:style=Normal:size=12;2 # Window 2
+font-2 = Iosevka Nerd Font:style=Bold:size=12;2 # WM 3
 
-module-margin-left = 2
-module-margin-right = 2 
+modules-left = i3 xwindow
+modules-center = 
+modules-right = networkspeed pulseaudio memory cpu temperature date powermenu
 
-font-0 = JetBrainsMono Nerd Font:style=Normal:size=12;2
-font-1 = JetBrainsMono Nerd Font:style=Light:size=11;2
-font-2 = JetBrainsMono Nerd Font:style=Bold:size=11;2
-font-3 = JetBrainsMono Nerd Font:size=12;2
-
-modules-left = i3 
-modules-center = xwindow
-modules-right = pulseaudio memory cpu temperature date powermenu
+module-margin = 2
+fixed-center = false
 
 tray-position = right
 tray-padding = 2
@@ -42,109 +40,93 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:60:..%
 label-font = 2
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
 
 [module/i3]
 type = internal/i3
 
 pin-workspaces = true
 reverse-scroll = true
+index-sort = true
 
-ws-icon-0 = 1;Main
-ws-icon-1 = 2;Dev
-ws-icon-2 = 3;Com
-ws-icon-3 = 4;Game
-ws-icon-4 = 5;Media
-ws-icon-5 = 6;X
-ws-icon-6 = 7;A
-ws-icon-7 = 8;B
-ws-icon-8 = 9;C
-ws-icon-default = "Dev"
+ws-icon-0 = 1; 
+ws-icon-1 = 2;
+ws-icon-2 = 3; 
+ws-icon-3 = 4; 
+ws-icon-4 = 5; 
+ws-icon-5 = 6; 
+ws-icon-6 = 7; 
+ws-icon-7 = 8;X 
+ws-icon-8 = 9;Y 
+ws-icon-default =  
 
-label-mode-padding = 1
+format = <label-state> <label-mode>
+format-font = 3
+
 label-mode-background = ${colors.primary}
 
 label-focused = %icon%
-label-focused-font = 3
 label-focused-background = ${colors.background-alt}
-# label-focused-underline = ${colors.primary}
-label-focused-padding = 1
+label-focused-underline = ${colors.focused}
+label-focused-padding = 2
 
 label-unfocused = %icon%
-label-unfocused-padding = 1
-label-unfocused-font = 2
+label-unfocused-padding = 2
 
 label-visible = %icon%
-label-visible-padding = 1
+label-visible-padding = 2
 
-label-urgent = %icon% 
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
+label-urgent-padding = 2
 
 [module/cpu]
 type = internal/cpu
 
-format-prefix = "CPU"
-label = %percentage:2%%
+format-prefix = "龍  "
+label = CPU %percentage:2%%
+
+[module/temperature]
+type = internal/temperature
+thermal-zone = 0
+warn-temperature = 60
+
+format = <label>
+format-warn = <label-warn>
+format-warn-underline = ${self.format-underline}
+
+label = %temperature-c%
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
 interval = 1 
-format-prefix = "RAM "
+format-prefix = "  "
 label = %gb_used:0:3%/%gb_total% 
 
 [module/date]
 type = internal/date
 
 date = "%d-%m-%Y"
-
 time = %H:%M:%S
-
-label =   %date% %time%
+label = %date% %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-font = 4
+format-volume-font = 1
 format-volume-prefix = "奔 "
 format-volume = <label-volume>
 
-format-muted-font = 4
+format-muted-font = 1
 format-muted-prefix = "婢 "
-label-volume = %percentage%%
+format-muted = MUTE
+format-muted-foreground = ${colors.disabled}
 
-label-volume-foreground = ${root.foreground}
+label-volume = %percentage%%     
+label-underline = ${colors.primary}
 
 [module/alsa]
 type = internal/alsa
@@ -174,18 +156,6 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <label>
-format-warn = <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
 
 [module/networkspeed]
 type = internal/network
