--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,6 +11,7 @@ shadow-offset-y = -6;
 
 shadow-exclude = [
   "name = 'Notification'",
+  "name = 'Android Emulator'",
   "class_g = 'i3-frame'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
@@ -43,6 +44,8 @@ blur:
   size = 10;
   deviation = 5.0;
 };
+
+vsync = true;
 
 wintypes:
 {
