--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -22,18 +22,18 @@ shadow-exclude = [
 
 # Fading
 
-fading = true
+fading = True
 
-fade-in-step = 0.1;
-fade-out-step = 0.1;
+fade-in-step = 0.3;
+fade-out-step = 0.3;
 
 # Opacity
 
 active-opacity = 1.0; 
-inactive-opacity = 1.0;
+inactive-opacity = 0.91;
 
-frame-opacity = 0.5;
-# inactive-dim = 0.2
+frame-opacity = 0.9;
+inactive-dim = 0.0
 
 log-level = "warn";
 
@@ -50,9 +50,9 @@ vsync = true;
 wintypes:
 {
   main = { fade = true; blur = true; };
-  tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
   dock = { shadow = false; opacity: 0.87; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.9 }
-  dropdown_menu = { opacity = 0.9; }
+  popup_menu = { opacity = 0.95; focus = false }
+  dropdown_menu = { opacity = 0.95; }
 };
