--- a/.config/i3/config
+++ b/.config/i3/config
@@ -7,7 +7,7 @@ set $up k
 set $right l
 set $down j 
 # Font
-font pango:FiraCode Nerd Font Medium 11
+font pango:FiraCode Nerd Font Bold 10
 
 # Audio stuff 
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -147,9 +147,9 @@ default_floating_border none
 title_align center
 hide_edge_borders both
 
-set $bg #2e3440
-set $bg-alt #4c566a
-set $fg #ECEFF4
+set $bg #101010
+set $bg-alt #222222
+set $fg #c7cfdd
 
 # class                     border  backgr. text    indicator child_border
 client.focused              $bg-alt $bg-alt $fg $primary $bg-alt 
