--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -30,7 +30,7 @@ fade-out-step = 0.3;
 # Opacity
 
 active-opacity = 1.0; 
-inactive-opacity = 0.91;
+inactive-opacity = 1.0;
 
 frame-opacity = 0.9;
 inactive-dim = 0.0
@@ -49,7 +49,7 @@ vsync = true;
 
 wintypes:
 {
-  main = { fade = true; blur = true; };
+  main = { fade = true; blur = true };
   tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
   dock = { shadow = false; opacity: 0.87; }
   dnd = { shadow = false; }
